# python-starter

./: .gitattributes  .gitignore  Makefile  README.md  dprint.json  lefthook.yaml  lefthook.yml  pyproject.toml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: build.yaml  ci.yaml  deploy.yaml  test.yaml
lib/my_fibonacci/: __init__.py  __main__.py  sequence.py
lib/starter/: __init__.py  __main__.py  sequence.py
src/bonacci/: __init__.py  __main__.py  sequence.py
src/my_fibonacci/: __main__.py  sequence.py
src/starter/: __init__.py  __main__.py
tests/: test_sequence.py
