[project]
name = "bonacci"
version = "0.0.0"
dependencies = []
requires-python = ">=3.10"
authors = [
  {name = "Alfi Maulana", email = "alfi.maulana.f@gmail.com"},
]
description = "An example Python project for generating a Fibonacci sequence"
readme = "README.md"
license = "Unlicense"
keywords = ["python", "starter", "fibonacci"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
bonacci = "bonacci.__main__:main"

[project.urls]
repository = "https://github.com/threeal/python-starter.git"
issues = "https://github.com/threeal/python-starter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "lefthook>=1.11.14",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.11.13",
]

[tool.coverage.report]
fail_under = 100
omit = ["__main__.py"]

[tool.coverage.run]
source = ["bonacci"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D"]

[tool.ruff.lint.per-file-ignores]
"__main__.py" = ["T201"]
"tests/*" = ["S101"]
